# finetune-embedding-norwegian

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: README.md  training_config.yaml  training_config_base_multidataset_final.yaml  training_config_base_multidataset_v1.yaml  training_config_large_multidataset.yaml  training_config_sts.yaml
scripts/: analysis_config.yaml  analyze_checkpoint_degradation.py  analyze_embedding_quality.py  evaluate_mteb.py  validate_v6_pipeline.py  verify_setup.py
utils/: data_loader.py  data_loader_paws.py  data_loader_sts.py  embedding_metrics_callback.py  read_config.py  trainer.py  trainer_multidataset.py  trainer_nli.py
